--- a/projetos/TicTacToe/style.css
+++ b/projetos/TicTacToe/style.css
@@ -13,6 +13,7 @@ header {
     display: flex;
     margin: auto;
     justify-content: center;
+    align-items: center;
     font-size: 1.6em;
     padding: 10px;
 }
